Fix some layout bugs :eyes:

--- a/app/assets/stylesheets/core/base.scss
+++ b/app/assets/stylesheets/core/base.scss
@@ -3,8 +3,9 @@ body {
   background-color: #EBE6D7;
 }
 
-a, a:visited {
+a {
   color: $links;
+  text-decoration: none;
 
   &:hover {
     color: $hover-links;
