--- a/app/assets/stylesheets/modules/header/header.scss
+++ b/app/assets/stylesheets/modules/header/header.scss
@@ -6,9 +6,14 @@ $main-header-height: 50px;
   margin-bottom: 20px;
 }
 
+.main-header a,
+.main-header a:visited,
+.main-header a:hover {
+  color: #FFF;
+}
+
 .main-header .logo {
   @extend %reset-space;
   float: left;
   line-height: $main-header-height;
-  color: #FFF;
 }
